# winipedia-django

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: health_check.yaml  release.yaml
tests/: models.py
tests/test_winipedia_django/: __init__.py  test_bulk.py  test_command.py  test_database.py
tests/test_winipedia_django/test_utils/test_commands/: test_import_data.py
tests/test_winipedia_django/test_utils/test_commands/test_base/: test_base.py  test_command.py
tests/test_winipedia_django/test_utils/test_db/: test_bulk.py  test_fields.py  test_models.py  test_sql.py
