[project]
name = "winidjango"
version = "1.0.4"
description = "A utils package for django"
authors = [
    {name = "Winipedia",email = "win.steveker@gmx.de"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]


[project.scripts]
winidjango = "pyrig.dev.cli.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.packages]]
include = "winidjango"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pre-commit = "*"
django-stubs = "*"
types-setuptools = "*"
types-tqdm = "*"
pytest-mock = "*"
pytest = "*"
types-pyyaml = "*"
types-defusedxml = "*"
bandit = "*"
types-networkx = "*"
pytest-django = "*"
types-pyinstaller = "*"
pyinstaller = {version = "*", python = "<3.15"}

python = "*"
[tool.poetry.dependencies]
django = "*"
winiutils = "*"
pyrig = "*"
[tool.ruff]
exclude = [".*", "**/migrations/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ANN401"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["./experiment.py"]

[tool.bandit.assert_used]
skips = ["*test_*.py"]
